Use another link to edit personal info

--- a/src/ru/odnoklassniki/tests/ui/api/locale/en.properties
+++ b/src/ru/odnoklassniki/tests/ui/api/locale/en.properties
@@ -5,7 +5,7 @@ BTN_CLOSE=Close
 
 MENU_ABOUT=About
 
-LINK_PROFILE_PERSONAL=Edit Personal Info
+LINK_EDIT_PROFILE=Edit Personal Info
 
 TITLE_CHANGE_PERSONAL_INFO=Change Personal Info
 
