--- a/src/ru/odnoklassniki/tests/ui/api/locale/ru.properties
+++ b/src/ru/odnoklassniki/tests/ui/api/locale/ru.properties
@@ -8,7 +8,7 @@ BTN_CLOSE=Закрыть
 MENU_ABOUT=О себе
 
 # Links
-LINK_PROFILE_PERSONAL=Укажите место своего рождения.
+LINK_EDIT_PROFILE=Редактировать личные данные
 
 # Titles
 TITLE_CHANGE_PERSONAL_INFO=Изменить личные данные
