- Added ReportNG - Fixed WIButton name - Added invalid symbol tests

--- a/src/ru/odnoklassniki/tests/ui/api/locale/ru.properties
+++ b/src/ru/odnoklassniki/tests/ui/api/locale/ru.properties
@@ -23,6 +23,6 @@ MSG_PERSONAL_INFO_CHANGED=Ваши изменения сохранены.
 
 ERR_SPECIFY_NAME=Пожалуйста, укажите ваше имя.
 ERR_SPECIFY_SURNAME=Пожалуйста, укажите вашу фамилию.
-ERR_USE_LETTERS_ONLY=Пожалуйста, используйте только буквы.
+ERR_USE_ALPHA_ONLY=Пожалуйста, используйте только буквы.
 ERR_SPECIFY_CITY=Пожалуйста, укажите место проживания
 ERR_CHOOSE_CITY_FROM_LIST=Пожалуйста, выберите страну из списка.
