- Renamed LocaleManager - Clean build.xml - Optimized tests

--- a/src/ru/odnoklassniki/tests/ui/api/locale/en.properties
+++ b/src/ru/odnoklassniki/tests/ui/api/locale/en.properties
@@ -1,3 +1,16 @@
+MONTH_JANUARY=january
+MONTH_FEBRUARY=february
+MONTH_MARCH=march
+MONTH_APRIL=april
+MONTH_MAY=may
+MONTH_JUNE=june
+MONTH_JULY=july
+MONTH_AUGUST=august
+MONTH_SEPTEMBER=september
+MONTH_OCTOBER=october
+MONTH_NOVEMBER=november
+MONTH_DECEMBER=december
+
 BTN_LOGIN=Log in
 BTN_SAVE=Save
 BTN_CANCEL=Cancel
