--- a/src/ru/odnoklassniki/tests/ui/api/locale/ru.properties
+++ b/src/ru/odnoklassniki/tests/ui/api/locale/ru.properties
@@ -1,3 +1,16 @@
+MONTH_JANUARY=январь
+MONTH_FEBRUARY=февраль
+MONTH_MARCH=март
+MONTH_APRIL=апрель
+MONTH_MAY=май
+MONTH_JUNE=июнь
+MONTH_JULY=июль
+MONTH_AUGUST=август
+MONTH_SEPTEMBER=сентябрь
+MONTH_OCTOBER=октябрь
+MONTH_NOVEMBER=ноябрь
+MONTH_DECEMBER=декабрь
+
 # Buttons
 BTN_LOGIN=Войти
 BTN_SAVE=Сохранить
