- Added checkox input - Added gender tests

--- a/src/ru/odnoklassniki/tests/ui/api/locale/en.properties
+++ b/src/ru/odnoklassniki/tests/ui/api/locale/en.properties
@@ -11,6 +11,9 @@ MONTH_OCTOBER=october
 MONTH_NOVEMBER=november
 MONTH_DECEMBER=december
 
+MALE=male
+FEMALE=female
+
 BTN_LOGIN=Log in
 BTN_SAVE=Save
 BTN_CANCEL=Cancel
