--- a/src/ru/odnoklassniki/tests/ui/api/locale/ru.properties
+++ b/src/ru/odnoklassniki/tests/ui/api/locale/ru.properties
@@ -11,6 +11,9 @@ MONTH_OCTOBER=октябрь
 MONTH_NOVEMBER=ноябрь
 MONTH_DECEMBER=декабрь
 
+MALE=мужской
+FEMALE=женский
+
 # Buttons
 BTN_LOGIN=Войти
 BTN_SAVE=Сохранить
