--- a/src/ru/odnoklassniki/tests/ui/api/locale/en.properties
+++ b/src/ru/odnoklassniki/tests/ui/api/locale/en.properties
@@ -1,15 +1,15 @@
-MONTH_JANUARY=january
-MONTH_FEBRUARY=february
-MONTH_MARCH=march
-MONTH_APRIL=april
-MONTH_MAY=may
-MONTH_JUNE=june
-MONTH_JULY=july
-MONTH_AUGUST=august
-MONTH_SEPTEMBER=september
-MONTH_OCTOBER=october
-MONTH_NOVEMBER=november
-MONTH_DECEMBER=december
+JANUARY=january
+FEBRUARY=february
+MARCH=march
+APRIL=april
+MAY=may
+JUNE=june
+JULY=july
+AUGUST=august
+SEPTEMBER=september
+OCTOBER=october
+NOVEMBER=november
+DECEMBER=december
 
 MALE=male
 FEMALE=female
