--- a/src/ru/odnoklassniki/tests/ui/api/locale/ru.properties
+++ b/src/ru/odnoklassniki/tests/ui/api/locale/ru.properties
@@ -1,15 +1,15 @@
-MONTH_JANUARY=январь
-MONTH_FEBRUARY=февраль
-MONTH_MARCH=март
-MONTH_APRIL=апрель
-MONTH_MAY=май
-MONTH_JUNE=июнь
-MONTH_JULY=июль
-MONTH_AUGUST=август
-MONTH_SEPTEMBER=сентябрь
-MONTH_OCTOBER=октябрь
-MONTH_NOVEMBER=ноябрь
-MONTH_DECEMBER=декабрь
+JANUARY=январь
+FEBRUARY=февраль
+MARCH=март
+APRIL=апрель
+MAY=май
+JUNE=июнь
+JULY=июль
+AUGUST=август
+SEPTEMBER=сентябрь
+OCTOBER=октябрь
+NOVEMBER=ноябрь
+DECEMBER=декабрь
 
 MALE=мужской
 FEMALE=женский
