- Removed RuntimeException - Disable console log - Removed "accessible" - More tests

--- a/src/ru/odnoklassniki/tests/ui/api/locale/ru.properties
+++ b/src/ru/odnoklassniki/tests/ui/api/locale/ru.properties
@@ -14,6 +14,9 @@ DECEMBER=декабрь
 MALE=мужской
 FEMALE=женский
 
+LABEL_USERNAME=логин, адрес почты или телефон
+LABEL_PASSWORD=пароль
+
 # Buttons
 BTN_LOGIN=Войти
 BTN_SAVE=Сохранить
