--- a/src/ru/odnoklassniki/tests/ui/api/locale/en.properties
+++ b/src/ru/odnoklassniki/tests/ui/api/locale/en.properties
@@ -14,6 +14,9 @@ DECEMBER=december
 MALE=male
 FEMALE=female
 
+LABEL_USERNAME=username, email or phone number
+LABEL_PASSWORD=password
+
 BTN_LOGIN=Log in
 BTN_SAVE=Save
 BTN_CANCEL=Cancel
